ensure camel case
